--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>React Js Basics</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+
 </head>
 <body>
-
+<div id="app"></div>
 
 
 
